# claude-grass

./: .gitignore  HANDOFF.md  LICENSE  README.md  USER_GUIDE.md  config.toml.example  pyproject.toml
claude_profile_stats/: __init__.py  app.py  collector.py  config.py  db.py  metrics.py  publisher.py  renderers.py
docs/: CHAT_LOG.md  PRD.md  TRD.md
scripts/: generate_sample_assets.py
tests/: test_metrics.py  test_pricing.py  test_rollup.py
