[project]
name = "claude-profile-stats"
version = "0.1.0"
description = "Local-first Claude usage tracker that renders GitHub-profile-ready SVG assets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
claude-profile-stats = "claude_profile_stats.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

